# CyberStream

./: .env.local.example  .gitignore  AGENTS.md  README.en.md  README.md  requirements.txt
backend/: config.py  run.py
docs/: API_OVERVIEW.md  ARCHITECTURE.md  AUDIO_TRANSCODE_DESIGN_NOTES.md  CONFIG_REFERENCE.md  FRONTEND_AUDIO_TRANSCODE_GUIDE.md  FRONTEND_REVIEW_WORKBENCH_INTEGRATION.md  FRONTEND_USER_MANAGEMENT_INTEGRATION.md  LIBRARY_DESIGN_V1.md  MAINTENANCE_TODO.md  METADATA_PIPELINE_V1.md  PC_CLIENT_GOAL.md  PROJECT_HANDOVER.md  PROJECT_PROGRESS.md  RUNBOOK.md  STORAGE_CONFIG_FLOW.md  TEST_CHECKLIST.md  TMDB_PROXY_SETUP.md  VERSIONING.md
frontend/: CLAUDE.md  DOCUMENTATION.md  README.md  fetch_openapi.mjs  index.html  metadata.json  openapi.json  package-lock.json  package.json  字幕接口设计建议.md
pc/: README.md  RELEASE_FLOW.md  RELEASE_NOTES_TEMPLATE.md
pc/src-tauri/: Cargo.toml  tauri.conf.json
pc/src-tauri/capabilities/: default.json
pc/src-tauri/icons/: icon.icns
pc/src-tauri/src/: lib.rs  main.rs  mpv.rs
scripts/: backend_service.sh  db_backup.py
tests/: path_cleaner_test_utils.py  test_alist_provider.py  test_api_auth.py  test_audio_transcode.py  test_background_jobs.py  test_bangumi_metadata_provider.py  test_catalog_visibility.py  test_database_upsert.py  test_db_backup_script.py  test_docs_routes.py  test_genre_normalization.py  test_history_routes.py  test_homepage_routes.py  test_image_assets.py  test_library_movie_memberships.py  test_manual_content_routes.py  test_media_feature_parser.py  test_media_path_cleaner_cases.py  (+32 more)
(+145 files in other folders)
