[package]
name = "cyberstream-pc"
version = "1.21.0"
description = "CyberStream PC desktop client"
authors = ["Purewo"]
license = "Proprietary"
repository = "https://github.com/Purewo/CyberStream"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cyberstream_pc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
